# DITS-3D-robot-side

./: README.md
RGBD_streaming/: .gitignore  CMakeLists.txt  README.md  encodeRGBtoI420.cpp  encodeRGBtoI420.h  encode_z16.cpp  encode_z16.h  quality_over_network_capture.cpp  quality_over_network_save_to_raw.cpp  quality_over_network_send.cpp  receive.cpp  rs_tests.cpp  rs_tests.h  send.cpp  tests_z16_yuv.cpp
python_master_server/: config.py  coucou.py  logger.py  master_server.py  motion_detection_server.py  motion_detection_utils.py  motor.py  motor_controller.py  notices.md  robot_communication.py  subprocess_manager.py  subprocess_test_program.py
